Add test for withdraw without enough founds and transfers